# pico-audio-template

./: .clang-format  CMakeLists.txt  README.md  main.c  pico_sdk_import.cmake
